better solution for the scrollbar arrow problem https://github.com/datavisyn/lineup_htmlwidget/issues/8

--- a/inst/style/lineupjs_stylesheet.css
+++ b/inst/style/lineupjs_stylesheet.css
@@ -1,6 +1,5 @@
 .lu-row {
   background-color: rgba(0,0,0,0.0) !important;
-  height: 20px !important;
 }
 .lu-header {
   background-color: rgba(0,0,0,0.0) !important;
